# goodreads

./: .gitignore  Cargo.toml  Procfile  README.md  docker-compose.yml  sqlx-data.json
db/migrations/: 20220308_init.sql
src/: db.rs  error.rs  main.rs  structs.rs  templates.rs
src/routes/: mod.rs  refresh.rs  shared.rs  subscribe.rs  update.rs
templates/: base.html  error.html  refresh.html  subscribe.html  success.html
