[package]
name = "goodreads"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
askama = "0.11"
axum = "^0.4"
axum-macros = "0.1"
axum-server = { version = "^0.3", features = ["tls-rustls"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.9", features = ["blocking", "json", "multipart"] }
scraper = "0.12"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }

[dependencies.sqlx]
version = "^0.5"
default-features = false
features = [ "postgres", "runtime-tokio-rustls", "migrate", "macros", "offline" ]